--- a/package.json
+++ b/package.json
@@ -63,8 +63,7 @@
   },
   "husky": {
     "hooks": {
-      "post-merge": "yarn build",
-      "pre-commit": "lint-staged"
+      "post-merge": "yarn build"
     }
   },
   "lint-staged": {
